corrected skills list spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -119,7 +119,7 @@
 	flex-direction: row;
 	justify-content: space-evenly;
 	align-items: center;
-	margin-left: -6rem;
+	margin-left: -2rem;
 }
 
 .skillsList {
@@ -133,13 +133,13 @@
 }
 
 .item {
+	width: 8rem;
 	font-family: var(--body-font);
 	font-size: 1.2rem;
 	display: flex;
-	justify-content: center;
+	justify-content: space-evenly;
 	align-items: center;
 	margin-top: 2.6rem;
-	padding: 0.7rem;
 }
 
 @media (max-width: 768px) {
@@ -226,10 +226,15 @@
 		display: grid;
 		grid-template-columns: 1fr 2fr;
 		grid-template-rows: 1fr 1fr;
+		margin-left: 1rem;
 	}
 
 	.item {
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
 		margin-top: 2rem;
 		padding: 0.3rem;
+		margin-right: 3rem;
 	}
 }
